acceptance/tests/fixtures/cases/api-gateways/upstream-limits/gatewayclass.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: limits-gateway-class
spec:
  controllerName: consul.hashicorp.com/gateway-controller
  parametersRef:
    group: consul.hashicorp.com
    kind: GatewayClassConfig
    name: limits-gateway-class-config
