acceptance/tests/fixtures/cases/api-gateways/upstream-limits/kustomization.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
  - gatewayclassconfig.yaml
  - gatewayclass.yaml
  - gateway.yaml
  - route-upstream-limits-filter.yaml
  - httproute.yaml
